Texture paint. Masking overlay can`t be hidden (regression bug) #74096

Closed
opened 2020-02-22 03:09:18 +01:00 by Vyacheslav Kobozev · 12 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83, 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Broken: 2.83 (sub 4), branch: master, commit date: 2020-02-20 12:28
Worked: 2.81

Short description of error
switching off facemask overlay with overlay button not working now. It makes texture paintng annoying when I need to compare close colors but protect some faces.
Test Overlay Texture Paint [720p].mp4

Test_Overlay_Paint.blend

btw is there a way to tune mask transparancy? In 2.83 it become too dense for me.

Exact steps for others to reproduce the error
Texture painting mode. Mask some polys, off overlays, compare 2.81 and 2.83

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83, 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Broken: 2.83 (sub 4), branch: master, commit date: 2020-02-20 12:28 Worked: 2.81 **Short description of error** switching off facemask overlay with overlay button not working now. It makes texture paintng annoying when I need to compare close colors but protect some faces. [Test Overlay Texture Paint [720p].mp4](https://archive.blender.org/developer/F8361373/Test_Overlay_Texture_Paint__720p_.mp4) [Test_Overlay_Paint.blend](https://archive.blender.org/developer/F8361375/Test_Overlay_Paint.blend) btw is there a way to tune mask transparancy? In 2.83 it become too dense for me. **Exact steps for others to reproduce the error** Texture painting mode. Mask some polys, off overlays, compare 2.81 and 2.83

Added subscriber: @Vyach

Added subscriber: @Vyach
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm this, but I am not entirely sure, that this wasn't intentional.

Can confirm this, but I am not entirely sure, that this wasn't intentional.

I hope it is not intentional.
As I said, I need both: to have masked polys, and to have ability to compare colors on masked and unmasked areas.
Anyway, I hope it will be returned to 2.81 behavior.

I hope it is not intentional. As I said, I need both: to have masked polys, and to have ability to compare colors on masked and unmasked areas. Anyway, I hope it will be returned to 2.81 behavior.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looks like a bug to me

Looks like a bug to me
Philipp Oeser self-assigned this 2020-03-18 18:18:52 +01:00
Member

Caused by 9516921c05, investigating some paint overlay issues like this atm., will claim for now...

Caused by 9516921c05, investigating some paint overlay issues like this atm., will claim for now...

This issue was referenced by 579447bd89

This issue was referenced by 579447bd892af14a306e29f487ecf11ce226d52e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

@lichtwerk
Thanks! Just checked. Works fine!

@lichtwerk Thanks! Just checked. Works fine!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74096
No description provided.